adding composer autoloading

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
     ],
     "support": {
         "issues": "https://github.com/ppetermann/pheal/issues"
+    },
+    "autoload": {
+        "files": ["PhealLoadMe.php"]
     }
 }
