--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pheal/pheal",
+    "name": "3rdpartyeve/pheal",
     "description": "PHP Eve Api Library, a simple PHP lib to access the EVE Online API",
     "type": "library",
     "keywords": ["EVE Online", "Pheal", "EVE API"],
