--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "PHP Eve Api Library, a simple PHP lib to access the EVE Online API",
     "type": "library",
     "keywords": ["EVE Online", "Pheal", "PhealNG", "EVE API"],
-    "homepage": "https://github.com/ppetermann/pheal",
+    "homepage": "https://github.com/3rdpartyeve/phealng",
     "license": "MIT",
     "authors": [
         {
