--- a/.rmt.yml
+++ b/.rmt.yml
@@ -33,6 +33,7 @@ master:
     pre-release-actions:
         changelog-update:          # Update a CHANGELOG file before the release
             format: semantic
+            dump-commits: true
         update-version-class:
             class: lib/Pheal/Pheal.php
         vcs-commit: ~              # Commit the CHANGELOG
