--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,14 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.4.0",
+        "psr/log": "1.0.0"
     },
+
     "support": {
         "issues": "https://github.com/3rdpartyeve/phealng/issues"
     },
+
     "autoload": {
         "psr-4": { "Pheal\\": "lib/Pheal/" }
     }
